--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,9 +66,8 @@
             centerLatitude = position.coords.latitude;
             centerLongitude = position.coords.longitude;
             // // remove me...
-            // centerLatitude = -38.47;
-            // centerLongitude = 144.98;
-
+            centerLatitude = -33.870721;
+            centerLongitude = 151.204814;
             findClosestAirport(centerLatitude, centerLongitude);
           });
         else {
