--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
           </ul>
         </nav>
         <div id="copyright">
-          &copy; 2011 Jetstar Airways Pty Ltd. ABN 33 069 720 243
+          &copy; 2011 Jetstar Airways Pty Ltd. ABN <span class="normalText">337&nbsp;069&nbsp;720 &nbsp;43</span>
         </div>
       </footer>
     </div>
