--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -133,6 +133,10 @@
                 <li class="left">
                   <a href="#" class="borderBottomGray <%= 'topradius' if (i==1) %>">
                     <span class="resultTitle floatLeft"><%= "#{flight[:da]}-#{flight[:aa]}" %></span>
+                    <div>
+                      <span>ATD <%= rflight[:ddt][11..15] %></span>
+                      <span>ATA <%= rflight[:adt][11..15] %></span>
+                    </div>
                     <div class="searchDates floatRight">
                       <div class="floatleft days"><%= ddate.strftime('%a').upcase %><br/><%= ddate.strftime('%b').upcase %></div>
                       <div class="floatRight date"><%= ddate.strftime('%d') %></div>
@@ -150,6 +154,10 @@
                 <li class="left">
                   <a href="#" class="borderBottomGray <%= 'bottomradius' if (i==session[:return_flights].size) %> returnGray <%= 'topradius' if (session[:flight].blank? && i.eql?(1))%>">
                     <span class="return resultTitle floatLeft"><%= "#{rflight[:da]}-#{rflight[:aa]}" %></span>
+                    <div>
+                      <span>ATD <%= rflight[:ddt][11..15] %></span>
+                      <span>ATA <%= rflight[:adt][11..15] %></span>
+                    </div>
                     <div class="searchDates floatRight">
                       <div class="floatleft days"><%= adate.strftime('%a').upcase %><br/><%= ddate.strftime('%b').upcase %></div>
                       <div class="floatRight date"><%= ddate.strftime('%d') %></div>
