--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -134,8 +134,8 @@
                   <a href="#" class="borderBottomGray <%= 'topradius' if (i==1) %>">
                     <span class="resultTitle floatLeft"><%= "#{flight[:da]}-#{flight[:aa]}" %></span>
                     <div>
-                      <span>ATD <%= rflight[:ddt][11..15] %></span>
-                      <span>ATA <%= rflight[:adt][11..15] %></span>
+                      <span>ATD <%= flight[:ddt][11..15] %></span>
+                      <span>ATA <%= flight[:adt][11..15] %></span>
                     </div>
                     <div class="searchDates floatRight">
                       <div class="floatleft days"><%= ddate.strftime('%a').upcase %><br/><%= ddate.strftime('%b').upcase %></div>
