--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -400,13 +400,15 @@ only screen and (min-device-pixel-ratio: 1.5) {
     background: -moz-linear-gradient(top, #5B5B5B 0%, #5B5B5B 50%, #4B4B4B 100%);
   }
   .searchDates {
-    width:50px;
+    width:116px;
     margin-right:15px;
   }
   .days {
     font-size: 10px;
     color: white;
     float: left;
+    margin-right:5px;
+    text-transform:uppercase;
   }
   .date {
     font-size: 21px;
@@ -453,6 +455,8 @@ only screen and (min-device-pixel-ratio: 1.5) {
     width: 90% !important;
     margin:0 !important;
   }
+
+  #atd {margin-right:10px;}
 
 } /*   end of media query */
 
