--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -107,7 +107,7 @@
         <h4>Search by</h4>
         <ul class="submitList">
           <li class="halfw"><%= submit_tag "Find Flexible Date Flights", :id => "lowestFares"%></li>
-          <li class="halfw" style="text-align:right"><%= submit_tag "Find Exact Date Flights", :id => "exactDates"%></li>
+          <li class="halfw"><%= submit_tag "Find Exact Date Flights", :id => "exactDates"%></li>
         </ul>
       </div>
     <%- end -%>
