--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -41,7 +41,11 @@
                 <span id="dest_city"><%= session[:dest][0..-6] %></span>
               <%- else -%>
                 <span id="dest_short"></span>
-                <span id="dest_city">Choose your destination</span>
+                <span id="dest_city">
+                  Choose your
+                  <br />
+                  destination
+                </span>
               <%- end -%>
             </span>
             <span class="tfr right"></span>
