--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -165,7 +165,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FF4500), to(#FF4500), color-stop(.5,#FC6706));
     background: -moz-linear-gradient(top, #FF4500 0%, #FC6706 50%, #FF4500 100%);
   }
-
+  #flightMenu {margin-top:0 !important;}
   #schedule {
     float:left;
     margin-top:14px;
@@ -249,6 +249,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
   #exactDates{
     background: url("searchBtn.jpg") 0 -38px no-repeat;
     float:right !important;
+    margin-right:-5px;
   }
   .fullWidth {width:100%}
   .halfWidth {width:50%;}
