--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -5,7 +5,7 @@
     <div id="bcrumb"><h3>1 <span>of</span> 6</h3></div>
   </div>
 <%- end -%>
-  <div class="left contentWrap ffIndex">
+  <div id="flightMenu" class="left contentWrap ffIndex">
     <ul id="flightNav">
       <li><a href="#" class="gap3">One Way</a></li>
       <li><a href="#" class="gap3 current">Return</a></li>
