--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 800px){
 
 }/*/mediaquery*/
 
@@ -11,11 +11,12 @@ only screen and (min-device-pixel-ratio: 1.5) {
 
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 480px)  {
   header {
     background: transparent url("headBG.jpg") repeat-x;
     height:56px;
   }
+  header div{position:relative}
   #back {
     position:absolute;
     z-index:10;
@@ -454,7 +455,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     margin:0 !important;
   }
 
-} /*   end of media query */
+}/*   end of media query */
 
 a, input[type='button'], input[type='submit'], #uipv_main_adults, #uipv_main_child, #uipv_main_infants {
   outline:0;
@@ -792,3 +793,4 @@ span.graytxt {
   text-decoration: none !important;
   color: #bebebe !important;
 }
+
