--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -467,7 +467,56 @@ only screen and (min-device-pixel-ratio: 1.5) {
     margin:0 !important;
   }
 
+  /*----- ATD/ATA style -----*/
   #atd {margin-right:10px;}
+
+  /*--------------------------- geolocation styles ------------------------*/
+  #geolocation {
+    margin:0 auto;
+    width:100%;
+    margin-bottom:10px;
+    display:block;
+    margin-top:-24px;
+  }
+  .boxLeft {
+    background:url("searchGeoLft.png") no-repeat;
+    width:5px;
+    height:41px;
+  }
+  .boxRight {
+    background:url("searchGeoRght.png") no-repeat;
+    width:5px;
+    height:41px;
+  }
+  #geolocationTxt {
+    background:url("searchGeoBg.png") repeat-x;
+    height:29px;
+    display:block;    
+    width:98%;
+    padding-top:12px;
+    text-align:center;
+  }
+  #geolocationHeader {
+    font-size:14px;
+    font-weight:bold;
+    font-family:Arial;
+    width:82%;
+  }
+  #geolocationTxt span {
+    float:left;
+  }
+  #plane {
+    background:url("icons.png") no-repeat;
+    width:18px;
+    height:17px;
+    margin:0 10px;
+  }
+  #pen {
+    background:url("geoSearch.png") no-repeat;
+    width:20px;
+    height:19px;
+    margin:-2px 10px 0 10px;
+  }
 
 } /*   end of media query */
 
